# WA_Control_Code_Challenge

./: README.md
install/: local_setup.sh  setup.sh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
install/merge_arrays/lib/merge_arrays/: input_arrays_node  merge_arrays_node
install/merge_arrays/share/ament_index/resource_index/parent_prefix_path/: merge_arrays
install/merge_arrays/share/merge_arrays/: package.sh
install/merge_arrays/share/merge_arrays/cmake/: merge_arraysConfig.cmake
src/cpp_pubsub/: CMakeLists.txt
src/merge_arrays/: CMakeLists.txt  package.xml
src/merge_arrays/src/: input_arrays_function.cpp  merge_arrays_function.cpp
